[tool.poetry]
name = "rst2html5"
version = "1.11.0"
description = "Generates (X)HTML5 documents from standalone reStructuredText sources"
authors = ["André Felipe Dias <andref.dias@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://foss.heptapod.net/doc-utils/rst2html5"
documentation = "https://rst2html5.readthedocs.io/en/latest/"
keywords = ["restructuredtext", "rst", "html5", "doctutils"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages =[
    { include = "src"}
]

[tool.poetry.scripts]
rst2html5 = "rst2html5_:main"

[tool.poetry.dependencies]
python = ">3.4"
docutils = "<0.17"
Genshi = "^0.7.5"
Pygments = "^2.8.1"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
beautifulsoup4 = "^4.9.3"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
twine = "^3.4.1"
flake8 = "^3.9.1"
pytest = "<6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
