[tool.poetry]
name = "rst2html5"
version = "2.0"
description = "Generates (X)HTML5 documents from standalone reStructuredText sources"
authors = ["André Felipe Dias <andref.dias@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://foss.heptapod.net/doc-utils/rst2html5"
documentation = "https://rst2html5.readthedocs.io/en/latest/"
keywords = ["restructuredtext", "rst", "html5", "doctutils"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [{ include = "rst2html5" }]
include = ["rst2html5_.py"]

[tool.poetry.scripts]
rst2html5 = "rst2html5_:main" # overwrites docutils' rst2html5
# do not overwrite docutils original rst2html5.py
# "rst2html5.py" = "rst2html5_:main"

[tool.poetry.dependencies]
python = "^3.8"
docutils = ">=0.13.1"
Genshi = ">=0.7"
Pygments = ">=2.5"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
beautifulsoup4 = "^4.9.3"
flake8 = ">3.8"
pytest = ">6"
blue = "^0.6.0"
isort = "^5.8.0"
pytest-cov = "^2.11.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.blue]
line-length = 120
